# cpp_indie_studio

./: .gitignore  CMakeLists.txt  Makefile  SocketInfos  WORLD_RECORD.txt  lol.cpp  toClean
assets/maps/: Map's name  azerty.txt  dick.txt  giga_map.txt  hello  map.txt  map1.txt  map2.txt  mdr.txt  robzz  salopepute  tamere.txt
assets/models/: lightning.3ds
assets/models/bomb/boom/: explosionBLEND.3ds  explosionBLEND.blend  explosionBLEND.blend1  explosionBLEND.mtl
assets/models/sun/: sun.3ds
assets/models/vehicules/: boat.obj~
include/: Bomb.hpp  Camera.hpp  Chat.hpp  Clock.hpp  Core.hpp  Events.hpp  Game.hpp  GameBackUp.hpp  Graphism.hpp  Irrlicht.hpp  Macro.hpp  ManageStrings.hpp  Map.hpp  Object.hpp  Options.hpp  Player.hpp  Response.hpp  Server.hpp  Socket.hpp  Window.hpp  indie.hpp
include/AI/: AI.hpp
include/Events/: EventManager.hpp  Events.hpp
include/GUI/: Menu.hpp  SplashScreen.hpp
include/Local/: LocalGame.hpp
include/Utility/: ArgumentsCLI.hpp
srcs/: Camera.cpp  Clock.cpp  Core.cpp  Core.cpp.unused  Decor.cpp  Events.cpp  Irrlicht.cpp  Map.cpp  Player.cpp  Window.cpp  a.cpp  main.cpp
srcs/Client/: BackUp.cpp  Bomb.cpp  Chat.cpp  Clock.cpp  ConnectionWithServer.cpp  Core.cpp  Events.cpp  Map.cpp  MapEdit.cpp  Player.cpp  PlayerAction.cpp  Tchat.cpp  Window.cpp  main.cpp  playerAction.cpp  tchat.cpp
srcs/Client/AI/: AI.cpp  Astar.cpp  Astar.hpp
srcs/Client/Bombs/: Bombs.cpp
srcs/Client/Connection/: ConnectionWithServer.cpp
srcs/Client/Core/: Core.cpp
srcs/Client/Events/: EventManager.cpp  Events.cpp
srcs/Client/GUI/: Menu.cpp  SplashScreen.cpp
srcs/Client/Game/: Game.cpp  ManageMap.cpp
srcs/Client/Graphics/: Camera.cpp  Collision.cpp  Decor.cpp
srcs/Client/Graphism/: Camera.cpp  Collision.cpp  Decor.cpp  Graphism.cpp
srcs/Client/Local/: Backup.cpp  LocalGame.cpp
srcs/Client/Map/: Map.cpp  MapEdit.cpp
srcs/Client/Objects/: Bomb.cpp
srcs/Client/Player/: PlayerActions.cpp
srcs/GUI/: SplashScreen.cpp
srcs/Graphics/: Camera.cpp  Collision.cpp  Decor.cpp  Move.cpp
srcs/Graphism/: Camera.cpp  Collision.cpp  Decor.cpp
srcs/Server/: Server.cpp
srcs/Shared/: ManageStrings.cpp  Server.cpp  Socket.cpp
